--- a/client/src/sections/Home/Hero.css
+++ b/client/src/sections/Home/Hero.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding-top: 80px;
     overflow: hidden;
+    position: relative;
 }
 
 .hero__container {
